chamber/styles/base.css
* {
  margin: 0;
  padding: 0;
}

:root {
  --primary-color: #001f3f;
  --secondary-color: #ffd700;
  --third-color: #556b2f;
  --accent1-color: #800000;
  --accent2-color: #d3d3d3;
}

.dark-mode {
  --primary-color: white;
  --secondary-color: #333333;
  --third-color: gray;
  --accent1-color: #2F4F4F;
  --accent2-color: black;
}

#mode {
	position: absolute;
	top: 1rem;
	right: 1rem;
	font-size: 3rem;
	cursor: pointer;
	font-size: 1.5rem;
}
body {
  background-color: var(--accent2-color);
}

header,
footer {
  display: grid;
  grid-template-columns: 0.4fr auto;
  background-color: var(--accent1-color);
}
.logo {
  max-width: 100%;
  height: auto;
  grid-column: 1/2;
  margin-top: 3rem;
  margin-left: 3rem;
  z-index: 3;
  margin-bottom: 2rem;
}
p {
  text-align: left;
  padding: 0.5rem;
  color: var(--primary-color);
}
.navigation {
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
  text-align: center;
  list-style: none;
  background-color: var(--accent1-color);
}
.navigation a {
  /* display: none; */
  font-family: "Ubuntu", sans-serif, serif;
  color: var(--secondary-color);
  text-align: center;
  text-decoration: none;
  padding: 1rem;
}
.navigation a:hover {
  text-decoration: underline;
  color: var(--accent2-color);
}
main {
  padding: 0.7rem;
}
#hero,
.event_img,
.display_img {
  max-width: 100%;
  height: auto;
}
.display_img {
  padding: 3rem 0 0 0;
}
#hero_container {
  text-align: center;
}
#hero_container #join_btn {
  background-color: var(--secondary-color);
  color: var(--accent1-color);
  font-size: 0.9rem;
  padding: 12px 24px;
  border: black 0.2px solid;
  cursor: pointer;
  border-radius: 5px;
  box-shadow: 5px 5px 10px gray;
}
#hero_container #join_btn:hover,
#join_bas:hover,
#join_prem:hover {
  background-color: var(--third-color);
  color: var(--accent1-color);
}

#join_bas,
#join_prem {
  background-color: var(--accent1-color);
  color: var(--accent2-color);
  font-size: 0.9rem;
  padding: 12px 24px;
  border: none;
  cursor: pointer;
  border-radius: 5px;
  box-shadow: 5px 5px 10px gray;
}

h1 {
  color: var(--primary-color);
  font-family: "Merienda", serif;
  font-size: 1.8rem;
  text-align: center;
  padding: 1rem 1rem 0 1rem;
}
h2 {
  color: var(--primary-color);
  font-family: "Macondo", sans-serif, serif;
  text-align: center;
  font-size: 2rem;
  padding: 2rem 1rem 0 1rem;
}
h3 {
  color: var(--primary-color);
  padding: 2rem;
  border: black 3px solid;
}
/* Style the button that is used to open and close the collapsible content */
.collapsible {
  background-color: var(--accent2-color);
  color: var(--primary-color);
  cursor: pointer;
  padding: 1.5rem;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active,
.collapsible:hover {
  background-color: var(--secondary-color);
}

/* Style the collapsible content. Note: hidden by default */
.content {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  background-color: var(--accent2-color);
}
.collapsible:after {
  content: "\02795"; /* Unicode character for "plus" sign (+) */
  font-size: 13px;
  color: var(--accent2-color);
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "\2796"; /* Unicode character for "minus" sign (-) */
}

#promote {
  background-color: var(--third-color);
  padding: 1rem 1rem 2.5rem 1rem;
}
#membership {
  background-color: var(--secondary-color);
  padding: 1rem 1rem 4rem 1rem;
  margin-top: 1rem;
}
.premium_membership {
  margin-top: 5rem;
  text-align: center;
}
.basic_membership {
  text-align: center;
}
#owner {
  grid-column: 1/3;
  text-align: center;
  padding: 0 0 0 4rem;
}

#owner p {
  background-color: var(--accent1-color);
  color: var(--secondary-color);
}



.sidebar {
  width: 100%;
  font-size: larger;
  border: 1px solid var(--accent2-color);
  background-color: var(--accent2-color);

  padding: 10px 5px 10px 0;
  text-align: center;
}

.weatherwidget {
  width: 100%;
  padding-top: 1rem;
}

